--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div class="subscribe">
 		<div class="overlay">
 			<div class="container">
-			<form action="">
+			<form>
 				<input type="emali" name="mail" placeholder="Enter Your email address for newsletter">
 				<button class="upper">Subscribe</button>
 			</form>
@@ -267,7 +267,7 @@
 			<div class="container">
 				<h2 class="upper">Say <span class="main-color ">Hello</span></h2>
 				<p class="main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, ab consectetur. Ratione vitae nobis, cum eos amet <br>laboriosam molestias quia enim consequuntur  pariatur dolorem eum mollitia </p>
-				<form action="">
+				<form>
 					<input type="email" name="mail" placeholder="your email">
 					<input type="text" name="subject" placeholder="subject">
 					<textarea placeholder="message"></textarea>
