--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<div class="overlay">
 			<div class="container">
 			<form>
-				<input type="emali" name="mail" placeholder="Enter Your email address for newsletter">
+				<input type="Email" name="mail" placeholder="Enter Your email">
 				<button class="upper">Subscribe</button>
 			</form>
 			</div> <!-- end container-->
